# CRISPR-Target-Search

./: CMakeLists.txt  CRISPR-Cas9 Target Search.docx  README.md
data/: sequence.txt
include/: CRISPRSearch.h  DNASequence.h  Trie.h
src/: CRISPRSearch.cpp  DNASequence.cpp  Trie.cpp  main.cpp
